--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,13 +1,5 @@
-// COLOURS:
-// primary text (blue): #084b6d;
-// secondary (light blue): #f4fcff;
-// tertiary (green): #f8fbf3; 
-// quaternary (pink): #fff5f5; 
-// quinary (orange): #ffd698;
-// pastel blue: #d3f0f9 
-// white: #fff; 
-
-
+@use "./partials/setup";
+@use "./partials/variables";
 
 // HEADINGS:
 // h1: 28px;
@@ -15,17 +7,3 @@
 // h3: 54px;
 // h4: 34px;
 // h5: 14px;
-
-
-.skip-link {
-    position: absolute;
-    left: -1000px;
-    top: 5px;
-    z-index: 999;
-    background: white;
-    color: black;
-  }
-  
-  .skip-link:focus {
-    left: 0;
-  }
