--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -1,9 +1,9 @@
 // COLOURS:
-$primaryColor: #084b6d;
-$secondaryColor: #f4fcff;
-$tertiaryColor: #f8fbf3;
-$quaternaryColor: #fff5f5;
-$quinaryColor: #ffd698;
+$primary: #084b6d;
+$secondary: #f4fcff;
+$tertiary: #f8fbf3;
+$quaternary: #fff5f5;
+$quinary: #ffd698;
 $pastelBlue: #d3f0f9;
 $white: #fff;
 
