added more styles

--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -5,7 +5,7 @@ $tertiary: #f8fbf3;
 $quaternary: #fff5f5;
 $quinary: #ffd698;
 $pastelBlue: #d3f0f9;
-$white: #fff;
+$solidWhite: #fff;
 
 // Font families
 $headingFont: "Young Serif";
