--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -2,6 +2,8 @@
 @use "./partials/variables";
 @use "./partials/typography";
 @use "./partials/global";
+@use "./partials/nav";
+@use "./partials/header";
 
 // HEADINGS:
 // h1: 28px;
