--- a/styles/styles.css
+++ b/styles/styles.css
@@ -411,3 +411,68 @@ a.button:focus {
   background-color: #084b6d;
   color: #fff;
 }
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+.navBar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 10;
+  border-bottom: 1px solid rgba(8, 75, 109, 0.08);
+  background-color: #fff;
+}
+.navBar .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 20px 0;
+}
+.navBar .cartFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.navBar .cartFlex p {
+  margin-bottom: 0;
+  width: 24px;
+  height: 24px;
+  background-color: #084b6d;
+  color: #fff;
+  text-align: center;
+  border-radius: 50%;
+}
+.navBar .cartFlex .menuIcon, .navBar .cartFlex .bag {
+  margin-right: 15px;
+}
+
+.slideOutNav {
+  display: none;
+}
+
+header {
+  background: #f8fbf3;
+  margin-bottom: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+header .headerImgContainer {
+  width: 45%;
+}
+header .headerContentContainer {
+  width: 55%;
+  padding: 0 90px;
+}
