--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -4,6 +4,7 @@
 @use "./partials/global";
 @use "./partials/nav";
 @use "./partials/header";
+@use "./partials/categories";
 
 // HEADINGS:
 // h1: 28px;
