--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -5,6 +5,7 @@ header {
   margin-bottom: 90px;
   display: flex;
   align-items: center;
+  margin-top: 70px;
   // flex-wrap: wrap;
 
   .headerImgContainer {
