--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -5,6 +5,7 @@
 @use "./partials/nav";
 @use "./partials/header";
 @use "./partials/categories";
+@use "./partials/mediaQueries";
 
 // HEADINGS:
 // h1: 28px;
