--- a/styles/styles.css
+++ b/styles/styles.css
@@ -468,6 +468,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 70px;
 }
 header .headerImgContainer {
   width: 45%;
@@ -518,4 +519,32 @@ header .headerContentContainer {
 }
 .categoryGallery .itemFour {
   background: #fff5f5;
+}
+
+@media (max-width: 1000px) {
+  /* all of our styles for smaller DESKTOP devices will go within this breakpoint */
+  header .headerContentContainer {
+    padding: 0 50px;
+  }
+  header h3 {
+    font-size: 2.2rem;
+  }
+}
+@media (max-width: 800px) {
+  /* all of our styles for TABLET devices will go within this breakpoint */
+  header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  header .headerImgContainer {
+    width: 100%;
+  }
+  header .headerContentContainer {
+    width: 65%;
+  }
+}
+@media (max-width: 500px) {
+  /* all of our styles for MOBILE devices will go within this breakpoint */
 }
